--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html, body {
+html, body, #root {
   height: 100%;
   width: 100%;
   box-sizing: border-box;
